tests/ui/asm/issue-72570.rs
//@ needs-asm-support

use std::arch::asm;

fn main() {
    unsafe {
        asm!("", in("invalid") "".len());
        //~^ ERROR: invalid register `invalid`: unknown register
    }
}
